@@ -5,7 +5,7 @@ import com.google.common.base.Throwables;
 import com.mysql.cj.util.StringUtils;
 import com.shaft.driver.DriverFactory.DriverType;
 import com.shaft.driver.SHAFT;
-import com.shaft.gui.browser.internal.FluentBrowserActions;
+import com.shaft.gui.browser.BrowserActions;
 import com.shaft.gui.internal.video.RecordManager;
 import com.shaft.properties.internal.Properties;
 import com.shaft.properties.internal.PropertiesHelper;
@@ -22,43 +22,50 @@ import io.appium.java_client.remote.options.UnhandledPromptBehavior;
 import io.github.bonigarcia.wdm.WebDriverManager;
 import io.github.bonigarcia.wdm.config.WebDriverManagerException;
 import io.qameta.allure.Step;
-import lombok.AccessLevel;
-import lombok.Getter;
-import lombok.NonNull;
-import lombok.SneakyThrows;
+import lombok.*;
 import org.apache.logging.log4j.Level;
 import org.openqa.selenium.*;
+import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.chromium.ChromiumOptions;
+import org.openqa.selenium.devtools.DevTools;
+import org.openqa.selenium.devtools.HasDevTools;
+import org.openqa.selenium.devtools.v116.network.Network;
+import org.openqa.selenium.edge.EdgeDriver;
 import org.openqa.selenium.edge.EdgeOptions;
+import org.openqa.selenium.firefox.FirefoxDriver;
 import org.openqa.selenium.firefox.FirefoxDriverLogLevel;
 import org.openqa.selenium.firefox.FirefoxOptions;
 import org.openqa.selenium.firefox.FirefoxProfile;
+import org.openqa.selenium.ie.InternetExplorerDriver;
 import org.openqa.selenium.ie.InternetExplorerOptions;
 import org.openqa.selenium.logging.LogType;
 import org.openqa.selenium.logging.LoggingPreferences;
 import org.openqa.selenium.remote.*;
+import org.openqa.selenium.safari.SafariDriver;
 import org.openqa.selenium.safari.SafariOptions;
 import org.testng.Reporter;
 
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 
 public class DriverFactoryHelper {
     // TODO: implement pass and fail actions to enable initial factory method screenshot and append it to animated GIF
     private static String TARGET_HUB_URL;
-    private static final String WEB_DRIVER_MANAGER_MESSAGE = "Identifying OS/Driver combination and selecting the correct driver version automatically. Please note that if a new driver executable will be downloaded it may take some time...";
-    private static final String WEB_DRIVER_MANAGER_DOCKERIZED_MESSAGE = "Identifying target OS/Browser and setting up the dockerized environment automatically. Please note that if a new docker container will be downloaded it may take some time...";
+    private static final String WEB_DRIVER_MANAGER_MESSAGE = "Identifying OS/Driver combination. Please note that if a new browser/driver executable will be downloaded it may take some time depending on your connection...";
+    private static final String WEB_DRIVER_MANAGER_DOCKERIZED_MESSAGE = "Identifying target OS/Browser and setting up the dockerized environment automatically. Please note that if a new docker container will be downloaded it may take some time depending on your connection...";
     @Getter(AccessLevel.PUBLIC)
     private static String targetBrowserName = "";
     @Getter(AccessLevel.PUBLIC)
-    private static final ThreadLocal<WebDriver> driver = new ThreadLocal<>();
+    @Setter(AccessLevel.PUBLIC)
+    private static WebDriver driver;
     private static final ThreadLocal<WebDriverManager> webDriverManager = new ThreadLocal<>();
     private static ChromeOptions chOptions;
     private static FirefoxOptions ffOptions;
@@ -117,32 +124,32 @@ public class DriverFactoryHelper {
     }
 
     public static void closeDriver() {
-        if (driver.get() != null) {
+        if (driver != null) {
             if (SHAFT.Properties.visuals.videoParamsScope().equals("DriverSession")) {
                 RecordManager.attachVideoRecording();
             }
             try {
                 attachWebDriverLogs();
-
                 //if dockerized wdm.quit the relevant one
                 if (SHAFT.Properties.platform.executionAddress().toLowerCase().contains("dockerized")) {
-                    var pathToRecording = webDriverManager.get().getDockerRecordingPath(driver.get());
-                    webDriverManager.get().quit(driver.get());
+                    var pathToRecording = webDriverManager.get().getDockerRecordingPath(driver);
+                    webDriverManager.get().quit(driver);
                     RecordManager.attachVideoRecording(pathToRecording);
                 } else {
-                    driver.get().quit();
+                    driver.quit();
                 }
             } catch (WebDriverException | NullPointerException e) {
                 // driver was already closed at an earlier stage
             } catch (Exception e) {
                 ReportManagerHelper.logDiscrete(e);
             } finally {
-                driver.remove();
+                driver = null;
                 webDriverManager.remove();
                 ReportManager.log("Successfully Closed Driver.");
             }
+        } else {
+            ReportManager.log("Driver is already closed.");
         }
-        ReportManager.log("Driver is already closed.");
     }
 
     private static void failAction(String testData, Throwable... rootCauseException) {
@@ -168,9 +175,24 @@ public class DriverFactoryHelper {
         failAction("Unsupported Driver Type \"" + driverName + "\".");
         return DriverType.CHROME;
     }
+    private static void disableCacheEdgeAndChrome() {
+        if (SHAFT.Properties.flags.disableCache())
+        {
+            DevTools devTools = ((HasDevTools) driver).getDevTools();
+            devTools.createSessionIfThereIsNotOne();
+            devTools.send(Network.enable(Optional.empty(), Optional.empty(), Optional.of(100000000)));
+            devTools.send(Network.setCacheDisabled(true));
+            devTools.send(Network.clearBrowserCookies());
+            devTools.addListener(Network.responseReceived(), responseReceived -> {
+                if (responseReceived.getResponse().getFromDiskCache().isPresent()
+                        && responseReceived.getResponse().getFromDiskCache().get().equals(true)) {
+                    failAction("Cache wasn't cleared");
+                }
+            });
+        }
+    }
     private static void setDriverOptions(DriverType driverType, MutableCapabilities customDriverOptions) {
-        //get proxy server
-        // Proxy server settings | testing behind a proxy
+        // get Proxy server settings | testing behind a proxy
         String proxyServerSettings = SHAFT.Properties.platform.proxy();
 
         //https://github.com/GoogleChrome/chrome-launcher/blob/master/docs/chrome-flags-for-tools.md#--enable-automation
@@ -185,6 +207,12 @@ public class DriverFactoryHelper {
                 //noinspection SpellCheckingInspection
                 ffProfile.setPreference("browser.helperApps.neverAsk.saveToDisk",
                         "application/vnd.hzn-3d-crossword;video/3gpp;video/3gpp2;application/vnd.mseq;application/vnd.3m.post-it-notes;application/vnd.3gpp.pic-bw-large;application/vnd.3gpp.pic-bw-small;application/vnd.3gpp.pic-bw-var;application/vnd.3gp2.tcap;application/x-7z-compressed;application/x-abiword;application/x-ace-compressed;application/vnd.americandynamics.acc;application/vnd.acucobol;application/vnd.acucorp;audio/adpcm;application/x-authorware-bin;application/x-athorware-map;application/x-authorware-seg;application/vnd.adobe.air-application-installer-package+zip;application/x-shockwave-flash;application/vnd.adobe.fxp;application/pdf;application/vnd.cups-ppd;application/x-director;applicaion/vnd.adobe.xdp+xml;application/vnd.adobe.xfdf;audio/x-aac;application/vnd.ahead.space;application/vnd.airzip.filesecure.azf;application/vnd.airzip.filesecure.azs;application/vnd.amazon.ebook;application/vnd.amiga.ami;applicatin/andrew-inset;application/vnd.android.package-archive;application/vnd.anser-web-certificate-issue-initiation;application/vnd.anser-web-funds-transfer-initiation;application/vnd.antix.game-component;application/vnd.apple.installe+xml;application/applixware;application/vnd.hhe.lesson-player;application/vnd.aristanetworks.swi;text/x-asm;application/atomcat+xml;application/atomsvc+xml;application/atom+xml;application/pkix-attr-cert;audio/x-aiff;video/x-msvieo;application/vnd.audiograph;image/vnd.dxf;model/vnd.dwf;text/plain-bas;application/x-bcpio;application/octet-stream;image/bmp;application/x-bittorrent;application/vnd.rim.cod;application/vnd.blueice.multipass;application/vnd.bm;application/x-sh;image/prs.btif;application/vnd.businessobjects;application/x-bzip;application/x-bzip2;application/x-csh;text/x-c;application/vnd.chemdraw+xml;text/css;chemical/x-cdx;chemical/x-cml;chemical/x-csml;application/vn.contact.cmsg;application/vnd.claymore;application/vnd.clonk.c4group;image/vnd.dvb.subtitle;application/cdmi-capability;application/cdmi-container;application/cdmi-domain;application/cdmi-object;application/cdmi-queue;applicationvnd.cluetrust.cartomobile-config;application/vnd.cluetrust.cartomobile-config-pkg;image/x-cmu-raster;model/vnd.collada+xml;text/csv;application/mac-compactpro;application/vnd.wap.wmlc;image/cgm;x-conference/x-cooltalk;image/x-cmx;application/vnd.xara;application/vnd.cosmocaller;application/x-cpio;application/vnd.crick.clicker;application/vnd.crick.clicker.keyboard;application/vnd.crick.clicker.palette;application/vnd.crick.clicker.template;application/vn.crick.clicker.wordbank;application/vnd.criticaltools.wbs+xml;application/vnd.rig.cryptonote;chemical/x-cif;chemical/x-cmdf;application/cu-seeme;application/prs.cww;text/vnd.curl;text/vnd.curl.dcurl;text/vnd.curl.mcurl;text/vnd.crl.scurl;application/vnd.curl.car;application/vnd.curl.pcurl;application/vnd.yellowriver-custom-menu;application/dssc+der;application/dssc+xml;application/x-debian-package;audio/vnd.dece.audio;image/vnd.dece.graphic;video/vnd.dec.hd;video/vnd.dece.mobile;video/vnd.uvvu.mp4;video/vnd.dece.pd;video/vnd.dece.sd;video/vnd.dece.video;application/x-dvi;application/vnd.fdsn.seed;application/x-dtbook+xml;application/x-dtbresource+xml;application/vnd.dvb.ait;applcation/vnd.dvb.service;audio/vnd.digital-winds;image/vnd.djvu;application/xml-dtd;application/vnd.dolby.mlp;application/x-doom;application/vnd.dpgraph;audio/vnd.dra;application/vnd.dreamfactory;audio/vnd.dts;audio/vnd.dts.hd;imag/vnd.dwg;application/vnd.dynageo;application/ecmascript;application/vnd.ecowin.chart;image/vnd.fujixerox.edmics-mmr;image/vnd.fujixerox.edmics-rlc;application/exi;application/vnd.proteus.magazine;application/epub+zip;message/rfc82;application/vnd.enliven;application/vnd.is-xpr;image/vnd.xiff;application/vnd.xfdl;application/emma+xml;application/vnd.ezpix-album;application/vnd.ezpix-package;image/vnd.fst;video/vnd.fvt;image/vnd.fastbidsheet;application/vn.denovo.fcselayout-link;video/x-f4v;video/x-flv;image/vnd.fpx;image/vnd.net-fpx;text/vnd.fmi.flexstor;video/x-fli;application/vnd.fluxtime.clip;application/vnd.fdf;text/x-fortran;application/vnd.mif;application/vnd.framemaker;imae/x-freehand;application/vnd.fsc.weblaunch;application/vnd.frogans.fnc;application/vnd.frogans.ltf;application/vnd.fujixerox.ddd;application/vnd.fujixerox.docuworks;application/vnd.fujixerox.docuworks.binder;application/vnd.fujitu.oasys;application/vnd.fujitsu.oasys2;application/vnd.fujitsu.oasys3;application/vnd.fujitsu.oasysgp;application/vnd.fujitsu.oasysprs;application/x-futuresplash;application/vnd.fuzzysheet;image/g3fax;application/vnd.gmx;model/vn.gtw;application/vnd.genomatix.tuxedo;application/vnd.geogebra.file;application/vnd.geogebra.tool;model/vnd.gdl;application/vnd.geometry-explorer;application/vnd.geonext;application/vnd.geoplan;application/vnd.geospace;applicatio/x-font-ghostscript;application/x-font-bdf;application/x-gtar;application/x-texinfo;application/x-gnumeric;application/vnd.google-earth.kml+xml;application/vnd.google-earth.kmz;application/vnd.grafeq;image/gif;text/vnd.graphviz;aplication/vnd.groove-account;application/vnd.groove-help;application/vnd.groove-identity-message;application/vnd.groove-injector;application/vnd.groove-tool-message;application/vnd.groove-tool-template;application/vnd.groove-vcar;video/h261;video/h263;video/h264;application/vnd.hp-hpid;application/vnd.hp-hps;application/x-hdf;audio/vnd.rip;application/vnd.hbci;application/vnd.hp-jlyt;application/vnd.hp-pcl;application/vnd.hp-hpgl;application/vnd.yamaha.h-script;application/vnd.yamaha.hv-dic;application/vnd.yamaha.hv-voice;application/vnd.hydrostatix.sof-data;application/hyperstudio;application/vnd.hal+xml;text/html;application/vnd.ibm.rights-management;application/vnd.ibm.securecontainer;text/calendar;application/vnd.iccprofile;image/x-icon;application/vnd.igloader;image/ief;application/vnd.immervision-ivp;application/vnd.immervision-ivu;application/reginfo+xml;text/vnd.in3d.3dml;text/vnd.in3d.spot;mode/iges;application/vnd.intergeo;application/vnd.cinderella;application/vnd.intercon.formnet;application/vnd.isac.fcs;application/ipfix;application/pkix-cert;application/pkixcmp;application/pkix-crl;application/pkix-pkipath;applicaion/vnd.insors.igm;application/vnd.ipunplugged.rcprofile;application/vnd.irepository.package+xml;text/vnd.sun.j2me.app-descriptor;application/java-archive;application/java-vm;application/x-java-jnlp-file;application/java-serializd-object;text/x-java-source,java;application/javascript;application/json;application/vnd.joost.joda-archive;video/jpm;image/jpeg;video/jpeg;application/vnd.kahootz;application/vnd.chipnuts.karaoke-mmd;application/vnd.kde.karbon;aplication/vnd.kde.kchart;application/vnd.kde.kformula;application/vnd.kde.kivio;application/vnd.kde.kontour;application/vnd.kde.kpresenter;application/vnd.kde.kspread;application/vnd.kde.kword;application/vnd.kenameaapp;applicatin/vnd.kidspiration;application/vnd.kinar;application/vnd.kodak-descriptor;application/vnd.las.las+xml;application/x-latex;application/vnd.llamagraphics.life-balance.desktop;application/vnd.llamagraphics.life-balance.exchange+xml;application/vnd.jam;application/vnd.lotus-1-2-3;application/vnd.lotus-approach;application/vnd.lotus-freelance;application/vnd.lotus-notes;application/vnd.lotus-organizer;application/vnd.lotus-screencam;application/vnd.lotus-wordro;audio/vnd.lucent.voice;audio/x-mpegurl;video/x-m4v;application/mac-binhex40;application/vnd.macports.portpkg;application/vnd.osgeo.mapguide.package;application/marc;application/marcxml+xml;application/mxf;application/vnd.wolfrm.player;application/mathematica;application/mathml+xml;application/mbox;application/vnd.medcalcdata;application/mediaservercontrol+xml;application/vnd.mediastation.cdkey;application/vnd.mfer;application/vnd.mfmp;model/mesh;appliation/mads+xml;application/mets+xml;application/mods+xml;application/metalink4+xml;application/vnd.ms-powerpoint.template.macroenabled.12;application/vnd.ms-word.document.macroenabled.12;application/vnd.ms-word.template.macroenabed.12;application/vnd.mcd;application/vnd.micrografx.flo;application/vnd.micrografx.igx;application/vnd.eszigno3+xml;application/x-msaccess;video/x-ms-asf;application/x-msdownload;application/vnd.ms-artgalry;application/vnd.ms-ca-compressed;application/vnd.ms-ims;application/x-ms-application;application/x-msclip;image/vnd.ms-modi;application/vnd.ms-fontobject;application/vnd.ms-excel;application/vnd.ms-excel.addin.macroenabled.12;application/vnd.ms-excelsheet.binary.macroenabled.12;application/vnd.ms-excel.template.macroenabled.12;application/vnd.ms-excel.sheet.macroenabled.12;application/vnd.ms-htmlhelp;application/x-mscardfile;application/vnd.ms-lrm;application/x-msmediaview;aplication/x-msmoney;application/vnd.openxmlformats-officedocument.presentationml.presentation;application/vnd.openxmlformats-officedocument.presentationml.slide;application/vnd.openxmlformats-officedocument.presentationml.slideshw;application/vnd.openxmlformats-officedocument.presentationml.template;application/vnd.openxmlformats-officedocument.spreadsheetml.sheet;application/vnd.openxmlformats-officedocument.spreadsheetml.template;application/vnd.openxmformats-officedocument.wordprocessingml.document;application/vnd.openxmlformats-officedocument.wordprocessingml.template;application/x-msbinder;application/vnd.ms-officetheme;application/onenote;audio/vnd.ms-playready.media.pya;vdeo/vnd.ms-playready.media.pyv;application/vnd.ms-powerpoint;application/vnd.ms-powerpoint.addin.macroenabled.12;application/vnd.ms-powerpoint.slide.macroenabled.12;application/vnd.ms-powerpoint.presentation.macroenabled.12;appliation/vnd.ms-powerpoint.slideshow.macroenabled.12;application/vnd.ms-project;application/x-mspublisher;application/x-msschedule;application/x-silverlight-app;application/vnd.ms-pki.stl;application/vnd.ms-pki.seccat;application/vn.visio;video/x-ms-wm;audio/x-ms-wma;audio/x-ms-wax;video/x-ms-wmx;application/x-ms-wmd;application/vnd.ms-wpl;application/x-ms-wmz;video/x-ms-wmv;video/x-ms-wvx;application/x-msmetafile;application/x-msterminal;application/msword;application/x-mswrite;application/vnd.ms-works;application/x-ms-xbap;application/vnd.ms-xpsdocument;audio/midi;application/vnd.ibm.minipay;application/vnd.ibm.modcap;application/vnd.jcp.javame.midlet-rms;application/vnd.tmobile-ivetv;application/x-mobipocket-ebook;application/vnd.mobius.mbk;application/vnd.mobius.dis;application/vnd.mobius.plc;application/vnd.mobius.mqy;application/vnd.mobius.msl;application/vnd.mobius.txf;application/vnd.mobius.daf;tex/vnd.fly;application/vnd.mophun.certificate;application/vnd.mophun.application;video/mj2;audio/mpeg;video/vnd.mpegurl;video/mpeg;application/mp21;audio/mp4;video/mp4;application/mp4;application/vnd.apple.mpegurl;application/vnd.msician;application/vnd.muvee.style;application/xv+xml;application/vnd.nokia.n-gage.data;application/vnd.nokia.n-gage.symbian.install;application/x-dtbncx+xml;application/x-netcdf;application/vnd.neurolanguage.nlu;application/vnd.na;application/vnd.noblenet-directory;application/vnd.noblenet-sealer;application/vnd.noblenet-web;application/vnd.nokia.radio-preset;application/vnd.nokia.radio-presets;text/n3;application/vnd.novadigm.edm;application/vnd.novadim.edx;application/vnd.novadigm.ext;application/vnd.flographit;audio/vnd.nuera.ecelp4800;audio/vnd.nuera.ecelp7470;audio/vnd.nuera.ecelp9600;application/oda;application/ogg;audio/ogg;video/ogg;application/vnd.oma.dd2+xml;applicatin/vnd.oasis.opendocument.text-web;application/oebps-package+xml;application/vnd.intu.qbo;application/vnd.openofficeorg.extension;application/vnd.yamaha.openscoreformat;audio/webm;video/webm;application/vnd.oasis.opendocument.char;application/vnd.oasis.opendocument.chart-template;application/vnd.oasis.opendocument.database;application/vnd.oasis.opendocument.formula;application/vnd.oasis.opendocument.formula-template;application/vnd.oasis.opendocument.grapics;application/vnd.oasis.opendocument.graphics-template;application/vnd.oasis.opendocument.image;application/vnd.oasis.opendocument.image-template;application/vnd.oasis.opendocument.presentation;application/vnd.oasis.opendocumen.presentation-template;application/vnd.oasis.opendocument.spreadsheet;application/vnd.oasis.opendocument.spreadsheet-template;application/vnd.oasis.opendocument.text;application/vnd.oasis.opendocument.text-master;application/vnd.asis.opendocument.text-template;image/ktx;application/vnd.sun.xml.calc;application/vnd.sun.xml.calc.template;application/vnd.sun.xml.draw;application/vnd.sun.xml.draw.template;application/vnd.sun.xml.impress;application/vnd.sun.xl.impress.template;application/vnd.sun.xml.math;application/vnd.sun.xml.writer;application/vnd.sun.xml.writer.global;application/vnd.sun.xml.writer.template;application/x-font-otf;application/vnd.yamaha.openscoreformat.osfpvg+xml;application/vnd.osgi.dp;application/vnd.palm;text/x-pascal;application/vnd.pawaafile;application/vnd.hp-pclxl;application/vnd.picsel;image/x-pcx;image/vnd.adobe.photoshop;application/pics-rules;image/x-pict;application/x-chat;aplication/pkcs10;application/x-pkcs12;application/pkcs7-mime;application/pkcs7-signature;application/x-pkcs7-certreqresp;application/x-pkcs7-certificates;application/pkcs8;application/vnd.pocketlearn;image/x-portable-anymap;image/-portable-bitmap;application/x-font-pcf;application/font-tdpfr;application/x-chess-pgn;image/x-portable-graymap;image/png;image/x-portable-pixmap;application/pskc+xml;application/vnd.ctc-posml;application/postscript;application/xfont-type1;application/vnd.powerbuilder6;application/pgp-encrypted;application/pgp-signature;application/vnd.previewsystems.box;application/vnd.pvi.ptid1;application/pls+xml;application/vnd.pg.format;application/vnd.pg.osasli;tex/prs.lines.tag;application/x-font-linux-psf;application/vnd.publishare-delta-tree;application/vnd.pmi.widget;application/vnd.quark.quarkxpress;application/vnd.epson.esf;application/vnd.epson.msf;application/vnd.epson.ssf;applicaton/vnd.epson.quickanime;application/vnd.intu.qfx;video/quicktime;application/x-rar-compressed;audio/x-pn-realaudio;audio/x-pn-realaudio-plugin;application/rsd+xml;application/vnd.rn-realmedia;application/vnd.realvnc.bed;applicatin/vnd.recordare.musicxml;application/vnd.recordare.musicxml+xml;application/relax-ng-compact-syntax;application/vnd.data-vision.rdz;application/rdf+xml;application/vnd.cloanto.rp9;application/vnd.jisp;application/rtf;text/richtex;application/vnd.route66.link66+xml;application/rss+xml;application/shf+xml;application/vnd.sailingtracker.track;image/svg+xml;application/vnd.sus-calendar;application/sru+xml;application/set-payment-initiation;application/set-reistration-initiation;application/vnd.sema;application/vnd.semd;application/vnd.semf;application/vnd.seemail;application/x-font-snf;application/scvp-vp-request;application/scvp-vp-response;application/scvp-cv-request;application/svp-cv-response;application/sdp;text/x-setext;video/x-sgi-movie;application/vnd.shana.informed.formdata;application/vnd.shana.informed.formtemplate;application/vnd.shana.informed.interchange;application/vnd.shana.informed.package;application/thraud+xml;application/x-shar;image/x-rgb;application/vnd.epson.salt;application/vnd.accpac.simply.aso;application/vnd.accpac.simply.imp;application/vnd.simtech-mindmapper;application/vnd.commonspace;application/vnd.ymaha.smaf-audio;application/vnd.smaf;application/vnd.yamaha.smaf-phrase;application/vnd.smart.teacher;application/vnd.svd;application/sparql-query;application/sparql-results+xml;application/srgs;application/srgs+xml;application/sml+xml;application/vnd.koan;text/sgml;application/vnd.stardivision.calc;application/vnd.stardivision.draw;application/vnd.stardivision.impress;application/vnd.stardivision.math;application/vnd.stardivision.writer;application/vnd.tardivision.writer-global;application/vnd.stepmania.stepchart;application/x-stuffit;application/x-stuffitx;application/vnd.solent.sdkm+xml;application/vnd.olpc-sugar;audio/basic;application/vnd.wqd;application/vnd.symbian.install;application/smil+xml;application/vnd.syncml+xml;application/vnd.syncml.dm+wbxml;application/vnd.syncml.dm+xml;application/x-sv4cpio;application/x-sv4crc;application/sbml+xml;text/tab-separated-values;image/tiff;application/vnd.to.intent-module-archive;application/x-tar;application/x-tcl;application/x-tex;application/x-tex-tfm;application/tei+xml;text/plain;application/vnd.spotfire.dxp;application/vnd.spotfire.sfs;application/timestamped-data;applicationvnd.trid.tpt;application/vnd.triscape.mxs;text/troff;application/vnd.trueapp;application/x-font-ttf;text/turtle;application/vnd.umajin;application/vnd.uoml+xml;application/vnd.unity;application/vnd.ufdl;text/uri-list;application/nd.uiq.theme;application/x-ustar;text/x-uuencode;text/x-vcalendar;text/x-vcard;application/x-cdlink;application/vnd.vsf;model/vrml;application/vnd.vcx;model/vnd.mts;model/vnd.vtu;application/vnd.visionary;video/vnd.vivo;applicatin/ccxml+xml,;application/voicexml+xml;application/x-wais-source;application/vnd.wap.wbxml;image/vnd.wap.wbmp;audio/x-wav;application/davmount+xml;application/x-font-woff;application/wspolicy+xml;image/webp;application/vnd.webturb;application/widget;application/winhlp;text/vnd.wap.wml;text/vnd.wap.wmlscript;application/vnd.wap.wmlscriptc;application/vnd.wordperfect;application/vnd.wt.stf;application/wsdl+xml;image/x-xbitmap;image/x-xpixmap;image/x-xwindowump;application/x-x509-ca-cert;application/x-xfig;application/xhtml+xml;application/xml;application/xcap-diff+xml;application/xenc+xml;application/patch-ops-error+xml;application/resource-lists+xml;application/rls-services+xml;aplication/resource-lists-diff+xml;application/xslt+xml;application/xop+xml;application/x-xpinstall;application/xspf+xml;application/vnd.mozilla.xul+xml;chemical/x-xyz;text/yaml;application/yang;application/yin+xml;application/vnd.ul;application/zip;application/vnd.handheld-entertainment+xml;application/vnd.zzazz.deck+xml");
+                if (SHAFT.Properties.flags.disableCache()) {
+                    ffProfile.setPreference("browser.cache.disk.enable", false);
+                    ffProfile.setPreference("browser.cache.memory.enable", false);
+                    ffProfile.setPreference("browser.cache.offline.enable", false);
+                    ffProfile.setPreference("network.http.use-cache", false);
+                }
                 ffOptions.setProfile(ffProfile);
                 if (!SHAFT.Properties.platform.executionAddress().equalsIgnoreCase("local"))
                     ffOptions.setCapability(CapabilityType.PLATFORM_NAME, Properties.platform.targetPlatform());
@@ -196,7 +224,7 @@ public class DriverFactoryHelper {
                 ffOptions.setPageLoadTimeout(Duration.ofSeconds(SHAFT.Properties.timeouts.pageLoadTimeout()));
                 ffOptions.setScriptTimeout(Duration.ofSeconds(SHAFT.Properties.timeouts.scriptExecutionTimeout()));
                 //Add Proxy Setting if found
-                if (!proxyServerSettings.equals("")) {
+                if (SHAFT.Properties.platform.driverProxySettings() && !proxyServerSettings.isBlank()) {
                     Proxy proxy = new Proxy();
                     proxy.setHttpProxy(proxyServerSettings);
                     proxy.setSslProxy(proxyServerSettings);
@@ -210,20 +238,26 @@ public class DriverFactoryHelper {
                 if (customDriverOptions != null) {
                     ffOptions = ffOptions.merge(customDriverOptions);
                 }
+                ReportManager.logDiscrete(ffOptions.toString());
             }
             case IE -> {
                 ieOptions = new InternetExplorerOptions();
                 if (!SHAFT.Properties.platform.executionAddress().equalsIgnoreCase("local"))
                     ieOptions.setCapability(CapabilityType.PLATFORM_NAME, Properties.platform.targetPlatform());
-                ieOptions.setPageLoadStrategy(PageLoadStrategy.NORMAL);
+                ieOptions.setPageLoadStrategy(PageLoadStrategy.EAGER);
                 ieOptions.setPageLoadTimeout(Duration.ofSeconds(SHAFT.Properties.timeouts.pageLoadTimeout()));
                 ieOptions.setScriptTimeout(Duration.ofSeconds(SHAFT.Properties.timeouts.scriptExecutionTimeout()));
                 //Add Proxy Setting if found
-                if (!proxyServerSettings.equals("")) {
+                if (SHAFT.Properties.platform.driverProxySettings() && !proxyServerSettings.isBlank()) {
                     Proxy proxy = new Proxy();
                     proxy.setHttpProxy(proxyServerSettings);
                     proxy.setSslProxy(proxyServerSettings);
                     ieOptions.setProxy(proxy);
+                }
+                if(SHAFT.Properties.flags.disableCache())
+                {
+                    ieOptions.setCapability(InternetExplorerDriver.IE_ENSURE_CLEAN_SESSION, true);
+                    ieOptions.setCapability("applicationCacheEnabled",false);
                 }
                 //merge customWebDriverCapabilities.properties
                 ieOptions = ieOptions.merge(PropertyFileManager.getCustomWebDriverDesiredCapabilities());
@@ -231,6 +265,7 @@ public class DriverFactoryHelper {
                 if (customDriverOptions != null) {
                     ieOptions = ieOptions.merge(customDriverOptions);
                 }
+                ReportManager.logDiscrete(ieOptions.toString());
             }
             case CHROME, EDGE, CHROMIUM -> {
                 if (driverType.equals(DriverType.EDGE)) {
@@ -243,16 +278,19 @@ public class DriverFactoryHelper {
                 sfOptions = new SafariOptions();
                 if (!SHAFT.Properties.platform.executionAddress().equalsIgnoreCase("local"))
                     sfOptions.setCapability(CapabilityType.PLATFORM_NAME, Properties.platform.targetPlatform());
-                sfOptions.setCapability(CapabilityType.UNHANDLED_PROMPT_BEHAVIOUR, UnhandledPromptBehavior.ACCEPT_AND_NOTIFY);
-                sfOptions.setPageLoadStrategy(PageLoadStrategy.NORMAL);
+                sfOptions.setCapability(CapabilityType.UNHANDLED_PROMPT_BEHAVIOUR, UnhandledPromptBehavior.IGNORE);
+                sfOptions.setPageLoadStrategy(PageLoadStrategy.EAGER);
                 sfOptions.setPageLoadTimeout(Duration.ofSeconds(SHAFT.Properties.timeouts.pageLoadTimeout()));
                 sfOptions.setScriptTimeout(Duration.ofSeconds(SHAFT.Properties.timeouts.scriptExecutionTimeout()));
                 //Add Proxy Setting if found
-                if (!proxyServerSettings.equals("")) {
+                if (SHAFT.Properties.platform.driverProxySettings() && !proxyServerSettings.isBlank()) {
                     Proxy proxy = new Proxy();
                     proxy.setHttpProxy(proxyServerSettings);
                     proxy.setSslProxy(proxyServerSettings);
                     sfOptions.setProxy(proxy);
+                }
+                if(SHAFT.Properties.flags.disableCache()) {
+                    sfOptions.setCapability("safari:cleanSession", "true");
                 }
                 //merge customWebDriverCapabilities.properties
                 sfOptions = sfOptions.merge(PropertyFileManager.getCustomWebDriverDesiredCapabilities());
@@ -260,6 +298,7 @@ public class DriverFactoryHelper {
                 if (customDriverOptions != null) {
                     sfOptions = sfOptions.merge(customDriverOptions);
                 }
+                ReportManager.logDiscrete(sfOptions.toString());
             }
             case APPIUM_MOBILE_NATIVE, APPIUM_SAMSUNG_BROWSER, APPIUM_CHROME, APPIUM_CHROMIUM ->
                     appiumCapabilities = new DesiredCapabilities(PropertyFileManager.getCustomWebDriverDesiredCapabilities().merge(customDriverOptions));
@@ -347,14 +386,14 @@ public class DriverFactoryHelper {
         chromePreferences.put("download.prompt_for_download", "false");
         chromePreferences.put("download.default_directory", System.getProperty("user.dir") + File.separatorChar + SHAFT.Properties.paths.downloads());
         options.setExperimentalOption("prefs", chromePreferences);
-        options.setUnhandledPromptBehaviour(UnexpectedAlertBehaviour.ACCEPT_AND_NOTIFY);
+        options.setUnhandledPromptBehaviour(UnexpectedAlertBehaviour.IGNORE);
         options.setCapability(CapabilityType.ACCEPT_INSECURE_CERTS, true);
         options.setPageLoadStrategy(PageLoadStrategy.NONE); // https://www.skptricks.com/2018/08/timed-out-receiving-message-from-renderer-selenium.html
         options.setPageLoadTimeout(Duration.ofSeconds(SHAFT.Properties.timeouts.pageLoadTimeout()));
         options.setScriptTimeout(Duration.ofSeconds(SHAFT.Properties.timeouts.scriptExecutionTimeout()));
         //Add Proxy Setting if found
         String proxy = Properties.platform.proxy();
-        if (!"".equals(proxy)) {
+        if (SHAFT.Properties.platform.driverProxySettings() && !"".equals(proxy)) {
             options.setProxy(new Proxy().setHttpProxy(proxy).setSslProxy(proxy));
         }
         //add logging preferences if enabled
@@ -364,7 +403,7 @@ public class DriverFactoryHelper {
         // Mobile Emulation
         if (SHAFT.Properties.web.isMobileEmulation() && isWebExecution()) {
             Map<String, Object> mobileEmulation = new HashMap<>();
-            if (!SHAFT.Properties.web.mobileEmulationIsCustomDevice() && (!SHAFT.Properties.web.mobileEmulationDeviceName().equals(""))) {
+            if (!SHAFT.Properties.web.mobileEmulationIsCustomDevice() && (!SHAFT.Properties.web.mobileEmulationDeviceName().isBlank())) {
                 mobileEmulation.put("deviceName", SHAFT.Properties.web.mobileEmulationDeviceName());
             } else if (SHAFT.Properties.web.mobileEmulationIsCustomDevice()) {
                 if ((SHAFT.Properties.web.mobileEmulationWidth() != 0) && (SHAFT.Properties.web.mobileEmulationHeight() != 0)) {
@@ -376,18 +415,26 @@ public class DriverFactoryHelper {
                     }
                     mobileEmulation.put("deviceMetrics", deviceMetrics);
                 }
-                if (!SHAFT.Properties.web.mobileEmulationUserAgent().equals("")) {
+                if (!SHAFT.Properties.web.mobileEmulationUserAgent().isEmpty()) {
                     mobileEmulation.put("userAgent", SHAFT.Properties.web.mobileEmulationUserAgent());
                 }
             }
             options.setExperimentalOption("mobileEmulation", mobileEmulation);
         }
+        // Enable BiDi
+        options.setCapability("webSocketUrl", true);
         //merge customWebdriverCapabilities.properties
         options = (ChromiumOptions<?>) options.merge(PropertyFileManager.getCustomWebDriverDesiredCapabilities());
         //merge hardcoded custom options
         if (customDriverOptions != null) {
             options = (ChromiumOptions<?>) options.merge(customDriverOptions);
         }
+        if (!SHAFT.Properties.flags.autoCloseDriverInstance()) {
+            Map<Object, Object> chromeOptions = new HashMap<>((Map<Object, Object>) options.getCapability("goog:chromeOptions"));
+            chromeOptions.put("detach", true);
+            options.setCapability("goog:chromeOptions", chromeOptions);
+        }
+        ReportManager.logDiscrete(options.toString());
         return options;
     }
 
@@ -397,44 +444,30 @@ public class DriverFactoryHelper {
         logPrefs.enable(LogType.PERFORMANCE, java.util.logging.Level.ALL);
         logPrefs.enable(LogType.DRIVER, java.util.logging.Level.ALL);
         logPrefs.enable(LogType.BROWSER, java.util.logging.Level.ALL);
-        logPrefs.enable(LogType.CLIENT, java.util.logging.Level.ALL);
-        logPrefs.enable(LogType.SERVER, java.util.logging.Level.ALL);
-        logPrefs.enable(LogType.PROFILER, java.util.logging.Level.ALL);
         logPrefs.enable(LogType.DRIVER, java.util.logging.Level.ALL);
         return logPrefs;
     }
 
-    private static void createNewLocalDriverInstance(DriverType driverType, boolean recurse) {
+    private static void createNewLocalDriverInstance(DriverType driverType, boolean retry) {
         String initialLog = "Attempting to run locally on: \"" + Properties.platform.targetPlatform() + " | " + JavaHelper.convertToSentenceCase(driverType.getValue()) + "\"";
         if (SHAFT.Properties.web.headlessExecution()) {
             initialLog = initialLog + ", Headless Execution";
         }
         ReportManager.logDiscrete(initialLog + ".");
-
-        var proxy = SHAFT.Properties.platform.proxy();
-
         try {
+            ReportManager.logDiscrete(WEB_DRIVER_MANAGER_MESSAGE);
             switch (driverType) {
-                case FIREFOX -> {
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_MESSAGE);
-                    driver.set(WebDriverManager.firefoxdriver().proxy(proxy).capabilities(ffOptions).create());
-                }
-                case IE -> {
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_MESSAGE);
-                    driver.set(WebDriverManager.iedriver().proxy(proxy).capabilities(ieOptions).create());
-                }
+                case FIREFOX -> driver = new FirefoxDriver(ffOptions);
+                case IE -> driver = new InternetExplorerDriver(ieOptions);
                 case CHROME -> {
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_MESSAGE);
-                    driver.set(WebDriverManager.chromedriver().proxy(proxy).capabilities(chOptions).create());
+                    driver = new ChromeDriver(chOptions);
+                    disableCacheEdgeAndChrome();
                 }
                 case EDGE -> {
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_MESSAGE);
-                    driver.set(WebDriverManager.edgedriver().proxy(proxy).capabilities(edOptions).create());
+                    driver = new EdgeDriver(edOptions);
+                    disableCacheEdgeAndChrome();
                 }
-                case SAFARI -> {
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_MESSAGE);
-                    driver.set(WebDriverManager.safaridriver().proxy(proxy).capabilities(sfOptions).create());
-                }
+                case SAFARI -> driver = new SafariDriver(sfOptions);
                 default ->
                         failAction("Unsupported Driver Type \"" + JavaHelper.convertToSentenceCase(driverType.getValue()) + "\".");
             }
@@ -453,14 +486,20 @@ public class DriverFactoryHelper {
             }
             // attempting blind fix by trying to quit existing driver if any
             try {
-                driver.get().quit();
+                driver.quit();
             } catch (Throwable throwable) {
                 // ignore
             } finally {
-                driver.remove();
+                driver = null;
             }
-            if (!recurse)
-                createNewLocalDriverInstance(driverType, true);
+            if (retry) {
+                try {
+                    Thread.sleep(5000);
+                } catch (InterruptedException e) {
+                    //do nothing
+                }
+                createNewLocalDriverInstance(driverType, false);
+            }
             failAction("Failed to create new Browser Session", exception);
         }
     }
@@ -473,27 +512,12 @@ public class DriverFactoryHelper {
         ReportManager.log(initialLog + ".");
 
         try {
+            ReportManager.logDiscrete(WEB_DRIVER_MANAGER_DOCKERIZED_MESSAGE);
             switch (driverType) {
-                case FIREFOX -> {
-                    ReportManager.logDiscrete(ffOptions.toString());
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_DOCKERIZED_MESSAGE);
-                    webDriverManager.set(WebDriverManager.firefoxdriver().capabilities(ffOptions));
-                }
-                case CHROME -> {
-                    ReportManager.logDiscrete(chOptions.toString());
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_DOCKERIZED_MESSAGE);
-                    webDriverManager.set(WebDriverManager.chromedriver().capabilities(chOptions));
-                }
-                case EDGE -> {
-                    ReportManager.logDiscrete(edOptions.toString());
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_DOCKERIZED_MESSAGE);
-                    webDriverManager.set(WebDriverManager.edgedriver().capabilities(edOptions));
-                }
-                case SAFARI -> {
-                    ReportManager.logDiscrete(sfOptions.toString());
-                    ReportManager.logDiscrete(WEB_DRIVER_MANAGER_DOCKERIZED_MESSAGE);
-                    webDriverManager.set(WebDriverManager.safaridriver().capabilities(sfOptions));
-                }
+                case FIREFOX -> webDriverManager.set(WebDriverManager.firefoxdriver().capabilities(ffOptions));
+                case CHROME -> webDriverManager.set(WebDriverManager.chromedriver().capabilities(chOptions));
+                case EDGE -> webDriverManager.set(WebDriverManager.edgedriver().capabilities(edOptions));
+                case SAFARI -> webDriverManager.set(WebDriverManager.safaridriver().capabilities(sfOptions));
                 default ->
                         failAction("Unsupported Driver Type \"" + JavaHelper.convertToSentenceCase(driverType.getValue()) + "\". We only support Chrome, Edge, Firefox, and Safari in this dockerized mode.");
             }
@@ -510,8 +534,8 @@ public class DriverFactoryHelper {
                     .dockerRecordingOutput(SHAFT.Properties.paths.video())
                     .create();
             remoteWebDriver.setFileDetector(new LocalFileDetector());
-//            driver.set(ThreadGuard.protect(remoteWebDriver));
-            driver.set(remoteWebDriver);
+//            driver =ThreadGuard.protect(remoteWebDriver));
+            driver = remoteWebDriver;
             ReportManager.log("Successfully Opened " + JavaHelper.convertToSentenceCase(driverType.getValue()) + ".");
         } catch (io.github.bonigarcia.wdm.config.WebDriverManagerException exception) {
             failAction("Failed to create new Dockerized Browser Session, are you sure Docker is available on your machine?", exception);
@@ -542,6 +566,7 @@ public class DriverFactoryHelper {
                 appiumCapabilities = initializeMobileDesiredCapabilities(null);
             } else {
                 appiumCapabilities.merge(initializeMobileDesiredCapabilities(appiumCapabilities));
+                ReportManager.log(appiumCapabilities.toString());
             }
         }
 
@@ -586,19 +611,19 @@ public class DriverFactoryHelper {
         // stage 2: create remove driver instance (requires some time with dockerized appium)
         ReportManager.logDiscrete("Attempting to instantiate remote driver instance for up to " + TimeUnit.SECONDS.toMinutes(remoteServerInstanceCreationTimeout) + "min.");
         try {
-            driver.set(attemptRemoteServerConnection(capabilities));
-            ((RemoteWebDriver) driver.get()).setFileDetector(new LocalFileDetector());
+            driver = attemptRemoteServerConnection(capabilities);
+            ((RemoteWebDriver) driver).setFileDetector(new LocalFileDetector());
             if (!isWebExecution() && SHAFT.Properties.platform.targetPlatform().equalsIgnoreCase("Android")) {
                 // https://github.com/appium/appium-uiautomator2-driver#settings-api
-                ((AppiumDriver) driver.get()).setSetting(Setting.WAIT_FOR_IDLE_TIMEOUT, 5000);
-                ((AppiumDriver) driver.get()).setSetting(Setting.ALLOW_INVISIBLE_ELEMENTS, true);
-                ((AppiumDriver) driver.get()).setSetting(Setting.IGNORE_UNIMPORTANT_VIEWS, false);
-                ((AppiumDriver) driver.get()).setSetting("enableMultiWindows", true);
+                ((AppiumDriver) driver).setSetting(Setting.WAIT_FOR_IDLE_TIMEOUT, 5000);
+                ((AppiumDriver) driver).setSetting(Setting.ALLOW_INVISIBLE_ELEMENTS, true);
+                ((AppiumDriver) driver).setSetting(Setting.IGNORE_UNIMPORTANT_VIEWS, false);
+                ((AppiumDriver) driver).setSetting("enableMultiWindows", true);
 //        elementResponseAttributes, shouldUseCompactResponses
-                ((AppiumDriver) driver.get()).setSetting(Setting.MJPEG_SCALING_FACTOR, 25);
-                ((AppiumDriver) driver.get()).setSetting(Setting.MJPEG_SERVER_SCREENSHOT_QUALITY, 100);
-                ((AppiumDriver) driver.get()).setSetting("mjpegBilinearFiltering", true);
-                // ((AppiumDriver) driver.get()).setSetting("limitXPathContextScope", false);
+                ((AppiumDriver) driver).setSetting(Setting.MJPEG_SCALING_FACTOR, 25);
+                ((AppiumDriver) driver).setSetting(Setting.MJPEG_SERVER_SCREENSHOT_QUALITY, 100);
+                ((AppiumDriver) driver).setSetting("mjpegBilinearFiltering", true);
+                // ((AppiumDriver) driver).setSetting("limitXPathContextScope", false);
 //                ((AppiumDriver) driver).setSetting("disableIdLocatorAutocompletion", true);
 //        https://github.com/appium/appium-uiautomator2-driver#mobile-deeplink
 //        http://code2test.com/appium-tutorial/how-to-use-uiselector-in-appium/
@@ -608,7 +633,6 @@ public class DriverFactoryHelper {
         } catch (Throwable throwable) {
             failAction("Failed to instantiate remote driver instance.", throwable);
         }
-        DriverFactoryHelper.driver.set(driver.get());
     }
 
     @SneakyThrows(java.lang.InterruptedException.class)
@@ -648,15 +672,16 @@ public class DriverFactoryHelper {
 
     @SneakyThrows({java.net.MalformedURLException.class, InterruptedException.class})
     private static RemoteWebDriver attemptRemoteServerConnection(Capabilities capabilities) {
-        ReportManager.logDiscrete(capabilities.toString());
         RemoteWebDriver driver = null;
         boolean isRemoteConnectionEstablished = false;
         var startTime = System.currentTimeMillis();
+        var exception = "";
         do {
             try {
                 driver = connectToRemoteServer(capabilities, false);
                 isRemoteConnectionEstablished = true;
             } catch (org.openqa.selenium.SessionNotCreatedException sessionNotCreatedException1) {
+                exception = sessionNotCreatedException1.getMessage();
                 try {
                     driver = connectToRemoteServer(capabilities, true);
                     isRemoteConnectionEstablished = true;
@@ -672,8 +697,8 @@ public class DriverFactoryHelper {
                 Thread.sleep(TimeUnit.SECONDS.toMillis(appiumServerPreparationPollingInterval));
             }
         } while (!isRemoteConnectionEstablished && (System.currentTimeMillis() - startTime < TimeUnit.SECONDS.toMillis(remoteServerInstanceCreationTimeout)));
-        if (!isRemoteConnectionEstablished){
-            failAction("Failed to connect to remote server. Session was still not created after " + TimeUnit.SECONDS.toMinutes(remoteServerInstanceCreationTimeout) + " minutes.");
+        if (!isRemoteConnectionEstablished) {
+            failAction("Failed to connect to remote server. Session was still not created after " + TimeUnit.SECONDS.toMinutes(remoteServerInstanceCreationTimeout) + " minutes." + "\nOriginal Error is : " + exception);
         }
         return driver;
     }
@@ -689,29 +714,29 @@ public class DriverFactoryHelper {
 
         if (targetPlatform.equalsIgnoreCase(Platform.ANDROID.toString())) {
             if (SHAFT.Properties.platform.executionAddress().contains("lambdatest") && !isMobileWebExecution()) {
-                return new AndroidDriver(new URL(targetMobileHubUrl), capabilities);
+                return new AndroidDriver(URI.create(targetMobileHubUrl).toURL(), capabilities);
             } else {
                 if (SHAFT.Properties.platform.executionAddress().contains("lambdatest")) {
-                    return new AndroidDriver(new URL(targetLambdaTestHubURL), capabilities);
+                    return new AndroidDriver(URI.create(targetLambdaTestHubURL).toURL(), capabilities);
                 } else {
-                    return new AndroidDriver(new URL(targetHubUrl), capabilities);
+                    return new AndroidDriver(URI.create(targetHubUrl).toURL(), capabilities);
                 }
             }
         } else if (targetPlatform.equalsIgnoreCase(Platform.IOS.toString())) {
             if (SHAFT.Properties.platform.executionAddress().contains("lambdatest") && !isMobileWebExecution()) {
-                return new IOSDriver(new URL(targetMobileHubUrl), capabilities);
+                return new IOSDriver(URI.create(targetMobileHubUrl).toURL(), capabilities);
             } else {
                 if (SHAFT.Properties.platform.executionAddress().contains("lambdatest")) {
-                    return new IOSDriver(new URL(targetLambdaTestHubURL), capabilities);
+                    return new IOSDriver(URI.create(targetLambdaTestHubURL).toURL(), capabilities);
                 } else {
-                    return new IOSDriver(new URL(targetHubUrl), capabilities);
+                    return new IOSDriver(URI.create(targetHubUrl).toURL(), capabilities);
                 }
             }
         } else {
             if (SHAFT.Properties.platform.executionAddress().contains("lambdatest")) {
-                return new RemoteWebDriver(new URL(targetLambdaTestHubURL), capabilities);
+                return new RemoteWebDriver(URI.create(targetLambdaTestHubURL).toURL(), capabilities);
             } else {
-                return new RemoteWebDriver(new URL(targetHubUrl), capabilities);
+                return new RemoteWebDriver(URI.create(targetHubUrl).toURL(), capabilities);
             }
         }
     }
@@ -731,7 +756,6 @@ public class DriverFactoryHelper {
                 }
             }
             case APPIUM_CHROME, APPIUM_CHROMIUM -> {
-                ReportManager.logDiscrete(WEB_DRIVER_MANAGER_MESSAGE);
                 WebDriverManager.chromedriver().browserVersion(SHAFT.Properties.mobile.browserVersion()).setup();
                 appiumDesiredCapabilities.setCapability("chromedriverExecutable",
                         WebDriverManager.chromedriver().getDownloadedDriverPath());
@@ -752,7 +776,7 @@ public class DriverFactoryHelper {
         // TODO: capture logs and record video in case of retrying failed test
         if (SHAFT.Properties.reporting.captureWebDriverLogs()) {
             try {
-                var driverLogs = driver.get().manage().logs();
+                var driverLogs = driver.manage().logs();
                 driverLogs.getAvailableLogTypes().forEach(logType -> {
                             var logBuilder = new StringBuilder();
                             driverLogs.get(logType).getAll().forEach(logEntry -> logBuilder.append(logEntry.toString()).append(System.lineSeparator()));
@@ -766,13 +790,11 @@ public class DriverFactoryHelper {
     }
 
     @SuppressWarnings("SpellCheckingInspection")
-    private static DesiredCapabilities initializeMobileDesiredCapabilities(DesiredCapabilities Desiredcapabilities) {
-        var desiredCapabilities = new DesiredCapabilities();
-
+    private static DesiredCapabilities initializeMobileDesiredCapabilities(DesiredCapabilities desiredCapabilities) {
         if (!isMobileWebExecution()) {
             Map<String, String> caps = PropertyFileManager.getAppiumDesiredCapabilities();
             caps.forEach((capabilityName, value) -> {
-                if (!value.trim().equals("")) {
+                if (!value.isBlank()) {
                     if (Arrays.asList("true", "false").contains(value.trim().toLowerCase())) {
                         desiredCapabilities.setCapability(capabilityName.replace("mobile_", "appium:"), Boolean.valueOf(value));
                     } else if (StringUtils.isStrictlyNumeric(value.trim())) {
@@ -795,48 +817,48 @@ public class DriverFactoryHelper {
             // https://github.com/appium/appium-uiautomator2-driver
             // Check if user sent any capability then don't take the deafult
 
-            if(Desiredcapabilities.getCapability("appium:fullReset") == null)
+            if (desiredCapabilities.getCapability("appium:fullReset") == null)
                 desiredCapabilities.setCapability("appium:fullReset", true);
 
-            if(Desiredcapabilities.getCapability("appium:appWaitActivity") == null)
+            if (desiredCapabilities.getCapability("appium:appWaitActivity") == null)
                 desiredCapabilities.setCapability("appium:appWaitActivity", "*");
 
-            if(Desiredcapabilities.getCapability("appium:printPageSourceOnFindFailure") == null)
+            if (desiredCapabilities.getCapability("appium:printPageSourceOnFindFailure") == null)
                 desiredCapabilities.setCapability("appium:printPageSourceOnFindFailure", true);
 
-            if(Desiredcapabilities.getCapability("appium:disableWindowAnimation") == null)
+            if (desiredCapabilities.getCapability("appium:disableWindowAnimation") == null)
                 desiredCapabilities.setCapability("appium:disableWindowAnimation", true);
 
-            if(Desiredcapabilities.getCapability("appium:forceAppLaunch") == null)
+            if (desiredCapabilities.getCapability("appium:forceAppLaunch") == null)
                 desiredCapabilities.setCapability("appium:forceAppLaunch", true);
 
-            if(Desiredcapabilities.getCapability("appium:autoGrantPermissions") == null)
+            if (desiredCapabilities.getCapability("appium:autoGrantPermissions") == null)
                 desiredCapabilities.setCapability("appium:autoGrantPermissions", true);
 
 //            desiredCapabilities.setCapability("appium:otherApps", ",,,");
 
-            if(Desiredcapabilities.getCapability("appium:allowTestPackages") == null)
+            if (desiredCapabilities.getCapability("appium:allowTestPackages") == null)
                 desiredCapabilities.setCapability("appium:allowTestPackages", true);
 
-            if(Desiredcapabilities.getCapability("appium:enforceAppInstall") == null)
+            if (desiredCapabilities.getCapability("appium:enforceAppInstall") == null)
                 desiredCapabilities.setCapability("appium:enforceAppInstall", false);
 
-            if(Desiredcapabilities.getCapability("appium:clearDeviceLogsOnStart") == null)
+            if (desiredCapabilities.getCapability("appium:clearDeviceLogsOnStart") == null)
                 desiredCapabilities.setCapability("appium:clearDeviceLogsOnStart", true);
 
-            if(Desiredcapabilities.getCapability("appium:ignoreHiddenApiPolicyError") == null)
+            if (desiredCapabilities.getCapability("appium:ignoreHiddenApiPolicyError") == null)
                 desiredCapabilities.setCapability("appium:ignoreHiddenApiPolicyError", true);
 
-            if(Desiredcapabilities.getCapability("appium:isHeadless") == null)
+            if (desiredCapabilities.getCapability("appium:isHeadless") == null)
                 desiredCapabilities.setCapability("appium:isHeadless", true);
 
-            if(Desiredcapabilities.getCapability("appium:noSign") == null)
+            if (desiredCapabilities.getCapability("appium:noSign") == null)
                 desiredCapabilities.setCapability("appium:noSign", true);
 
-            if(Desiredcapabilities.getCapability("appium:enableWebviewDetailsCollection") == null)
+            if (desiredCapabilities.getCapability("appium:enableWebviewDetailsCollection") == null)
                 desiredCapabilities.setCapability("appium:enableWebviewDetailsCollection", true);
 
-            if(Desiredcapabilities.getCapability("appium:showChromedriverLog") == null)
+            if (desiredCapabilities.getCapability("appium:showChromedriverLog") == null)
                 desiredCapabilities.setCapability("appium:showChromedriverLog", true);
         }
         return desiredCapabilities;
@@ -877,7 +899,7 @@ public class DriverFactoryHelper {
         } else {
             targetBrowserName = SHAFT.Properties.web.targetBrowserName();
         }
-        DriverFactoryHelper.targetBrowserName = (mobile_browserName == null || mobile_browserName.equals("")) ? targetBrowserName : mobile_browserName;
+        DriverFactoryHelper.targetBrowserName = (mobile_browserName == null || mobile_browserName.isBlank()) ? targetBrowserName : mobile_browserName;
         initializeDriver((getDriverTypeFromName(DriverFactoryHelper.targetBrowserName)), customDriverOptions);
     }
 
@@ -904,14 +926,22 @@ public class DriverFactoryHelper {
                 //desktop execution
                 setDriverOptions(driverType, customDriverOptions);
                 switch (SHAFT.Properties.platform.executionAddress()) {
-                    case "local" -> createNewLocalDriverInstance(driverType, false);
+                    case "local" -> createNewLocalDriverInstance(driverType, true);
                     case "dockerized" -> createNewDockerizedDriverInstance(driverType);
                     default -> createNewRemoteDriverInstance(driverType);
                 }
             }
 
             if (SHAFT.Properties.web.headlessExecution()) {
-                driver.get().manage().window().setSize(new Dimension(TARGET_WINDOW_SIZE.getWidth(), TARGET_WINDOW_SIZE.getHeight()));
+                driver.manage().window().setSize(new Dimension(TARGET_WINDOW_SIZE.getWidth(), TARGET_WINDOW_SIZE.getHeight()));
+            } else {
+                Dimension browserWindowSize = new Dimension(
+                        SHAFT.Properties.web.browserWindowWidth(),
+                        SHAFT.Properties.web.browserWindowHeight()
+                );
+                if (!isMobileExecution && !SHAFT.Properties.flags.autoMaximizeBrowserWindow()) {
+                    driver.manage().window().setSize(browserWindowSize);
+                }
             }
 
             if (!isMobileExecution) {
@@ -920,19 +950,19 @@ public class DriverFactoryHelper {
                         && (
                         targetBrowserName.contains(Browser.SAFARI.browserName().toLowerCase())
                                 || targetBrowserName.contains(Browser.FIREFOX.browserName().toLowerCase()))) {
-                    FluentBrowserActions.getInstance().maximizeWindow();
+                    BrowserActions.getInstance().maximizeWindow();
                 }
             }
             // start session recording
-            RecordManager.startVideoRecording(driver.get());
+            RecordManager.startVideoRecording(driver);
         } catch (NullPointerException e) {
             FailureReporter.fail(DriverFactoryHelper.class, "Unhandled Exception with Driver Type \"" + JavaHelper.convertToSentenceCase(driverType.getValue()) + "\".", e);
         }
 
         if (SHAFT.Properties.healenium.healEnabled()) {
             ReportManager.logDiscrete("Initializing Healenium's Self Healing Driver...");
-//            driver.set(ThreadGuard.protect(SelfHealingDriver.create(driver.get())));
-            driver.set(SelfHealingDriver.create(driver.get()));
+//            driver =ThreadGuard.protect(SelfHealingDriver.create(driver)));
+            driver = SelfHealingDriver.create(driver);
         }
     }
 
